# aeo-npui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
bootstrap/: README.md  apt.txt  bootstrap.ps1  bootstrap.sh  brew.txt  winget.txt
console-native/: App.tsx  README.md  app.json  package-lock.json  package.json
console-native/scripts/: probe_cdp.py  repair_profile_exit_type.py  start_windows_chrome_cdp.ps1  stop_windows_chrome.ps1  validate_web_over_cdp.mjs  windows_chrome_cdp.sh
desktop/: index.html  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: architecture.md  feasibility.md  intent.md  testing.md
docs/archive/: 2026-03-console-native-prd.md  2026-03-dashboard-recovery-plan.md  2026-03-operator-console-cleanup-plan.md  2026-03-operator-console-e2e-recovery-plan.md  2026-03-operator-console-plan.md  README.md  phase-zero.md
docs/contracts/: endurance.md  events.md  metrics.md  service-api.md
scripts/: build-windows.ps1  extract-from-aeo-infra.sh  gen-types.sh  launch-dev.sh  make-windows.sh  version.py  winlaunch.sh
service/: pyproject.toml
service/scripts/: e2e_validate.py  e2e_visual_validate.py  windows_terminal_driver.ps1
service/src/npu_service/: __init__.py  __main__.py  cli.py  web_api.py
service/src/npu_service/core/: __init__.py  chat.py  dashboard_debug.py  events.py  runners.py  settings.py  version.py
service/src/npu_service/ui/: __init__.py  atomic_live.py  chat_console.py  dashboard.py
service/tests/: test_chat.py  test_cli.py  test_dashboard.py  test_events.py
service/tests/fixtures/: events_sample.jsonl
service/tests/snapshots/: dashboard_100x30.txt  dashboard_140x40.txt  dashboard_140x40_ratio_1_to_3.txt  dashboard_140x40_ratio_3_to_1.txt  dashboard_80x24.txt
(+23 files in other folders)
